# tetragon

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conandata.yml  injecto.cmake  vcpkg.json
applications/: CMakeLists.txt
applications/include/tetragon/: applications.hpp
applications/src/: applications.cc  initializations.cc
graphics/: CMakeLists.txt
graphics/include/tetragon/: graphics.hpp
graphics/include/tetragon/graphics/: definitions.hpp  primitives.hpp  shaders.hpp  shapes.hpp  vertices.hpp
graphics/src/: graphics.cc  primitives.cc  shaders.cc  shapes.cc  vertices.cc
include/glad/: glad.h
resources/: fragment.frag  vertex.vert
src/: application.cc  application.hpp  glad.c  graphics.cc  graphics.hpp  initializations.cc  initializations.hpp  main.cc
